# Quantum_computer_simulator

./: .clangd  .gitmodules  CMakeLists.txt  Taskfile.yaml  result.txt
include/: utils.h
src/: main.cc  n_qbit_adder.cc  three_bit_adder.cc
